# mosquitto-disconnections-plugin

./: README.md
plugins/disconnections/: CMakeLists.txt  mosquitto_disconnections.c
resources/: mosquitto.conf
src/: CMakeLists.txt  Makefile  mosquitto_disconnections.c
